dynosaur/tests/fail/const-attr.stderr
error: consts make the trait not dyn compatible
 --> fail/const-attr.rs:3:5
  |
3 |     const BAR: i32;
  |     ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

